src/main/gen/CommandsGrammarParser.java
// Generated from C:/Users/alexc/IdeaProjects/autocomplete/src/main/kotlin\CommandsGrammar.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CommandsGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Parameter=2, TypeToCreate=3, NavigationCommandKeyword=4, ClassCommandKeyword=5, 
		PrivacyKeyword=6, StaticKeyword=7, FinalKeyword=8, TypeKeyword=9, Text=10, 
		Numbers=11;
	public static final int
		RULE_classCommand = 0, RULE_classCommandSetterAndGetter = 1, RULE_addParameterInMethod = 2, 
		RULE_navigationCommandSimple = 3, RULE_name = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"classCommand", "classCommandSetterAndGetter", "addParameterInMethod", 
			"navigationCommandSimple", "name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", null, null, null, null, null, "'static'", "'final'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "Parameter", "TypeToCreate", "NavigationCommandKeyword", 
			"ClassCommandKeyword", "PrivacyKeyword", "StaticKeyword", "FinalKeyword", 
			"TypeKeyword", "Text", "Numbers"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CommandsGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CommandsGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassCommandContext extends ParserRuleContext {
		public TerminalNode ClassCommandKeyword() { return getToken(CommandsGrammarParser.ClassCommandKeyword, 0); }
		public TerminalNode TypeKeyword() { return getToken(CommandsGrammarParser.TypeKeyword, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TerminalNode> Text() { return getTokens(CommandsGrammarParser.Text); }
		public TerminalNode Text(int i) {
			return getToken(CommandsGrammarParser.Text, i);
		}
		public TerminalNode PrivacyKeyword() { return getToken(CommandsGrammarParser.PrivacyKeyword, 0); }
		public TerminalNode StaticKeyword() { return getToken(CommandsGrammarParser.StaticKeyword, 0); }
		public TerminalNode FinalKeyword() { return getToken(CommandsGrammarParser.FinalKeyword, 0); }
		public ClassCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).enterClassCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).exitClassCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CommandsGrammarVisitor ) return ((CommandsGrammarVisitor<? extends T>)visitor).visitClassCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassCommandContext classCommand() throws RecognitionException {
		ClassCommandContext _localctx = new ClassCommandContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Text) {
				{
				{
				setState(10);
				match(Text);
				setState(11);
				match(T__0);
				}
				}
				setState(16);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(17);
			match(ClassCommandKeyword);
			setState(20);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(18);
				match(T__0);
				setState(19);
				match(PrivacyKeyword);
				}
				break;
			}
			setState(24);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(22);
				match(T__0);
				setState(23);
				match(StaticKeyword);
				}
				break;
			}
			setState(28);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(26);
				match(T__0);
				setState(27);
				match(FinalKeyword);
				}
				break;
			}
			setState(30);
			match(T__0);
			setState(31);
			match(TypeKeyword);
			setState(32);
			name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassCommandSetterAndGetterContext extends ParserRuleContext {
		public TerminalNode TypeToCreate() { return getToken(CommandsGrammarParser.TypeToCreate, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TerminalNode> Text() { return getTokens(CommandsGrammarParser.Text); }
		public TerminalNode Text(int i) {
			return getToken(CommandsGrammarParser.Text, i);
		}
		public ClassCommandSetterAndGetterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classCommandSetterAndGetter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).enterClassCommandSetterAndGetter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).exitClassCommandSetterAndGetter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CommandsGrammarVisitor ) return ((CommandsGrammarVisitor<? extends T>)visitor).visitClassCommandSetterAndGetter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassCommandSetterAndGetterContext classCommandSetterAndGetter() throws RecognitionException {
		ClassCommandSetterAndGetterContext _localctx = new ClassCommandSetterAndGetterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classCommandSetterAndGetter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Text) {
				{
				{
				setState(34);
				match(Text);
				setState(35);
				match(T__0);
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			match(TypeToCreate);
			setState(42);
			name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AddParameterInMethodContext extends ParserRuleContext {
		public TerminalNode TypeKeyword() { return getToken(CommandsGrammarParser.TypeKeyword, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode Parameter() { return getToken(CommandsGrammarParser.Parameter, 0); }
		public List<TerminalNode> Text() { return getTokens(CommandsGrammarParser.Text); }
		public TerminalNode Text(int i) {
			return getToken(CommandsGrammarParser.Text, i);
		}
		public AddParameterInMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addParameterInMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).enterAddParameterInMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).exitAddParameterInMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CommandsGrammarVisitor ) return ((CommandsGrammarVisitor<? extends T>)visitor).visitAddParameterInMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddParameterInMethodContext addParameterInMethod() throws RecognitionException {
		AddParameterInMethodContext _localctx = new AddParameterInMethodContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_addParameterInMethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Text) {
				{
				{
				setState(44);
				match(Text);
				setState(45);
				match(T__0);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(51);
			match(Parameter);
			setState(52);
			match(T__0);
			}
			setState(54);
			match(TypeKeyword);
			setState(55);
			name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NavigationCommandSimpleContext extends ParserRuleContext {
		public TerminalNode NavigationCommandKeyword() { return getToken(CommandsGrammarParser.NavigationCommandKeyword, 0); }
		public List<TerminalNode> Text() { return getTokens(CommandsGrammarParser.Text); }
		public TerminalNode Text(int i) {
			return getToken(CommandsGrammarParser.Text, i);
		}
		public TerminalNode Numbers() { return getToken(CommandsGrammarParser.Numbers, 0); }
		public NavigationCommandSimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_navigationCommandSimple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).enterNavigationCommandSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).exitNavigationCommandSimple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CommandsGrammarVisitor ) return ((CommandsGrammarVisitor<? extends T>)visitor).visitNavigationCommandSimple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NavigationCommandSimpleContext navigationCommandSimple() throws RecognitionException {
		NavigationCommandSimpleContext _localctx = new NavigationCommandSimpleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_navigationCommandSimple);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Text) {
				{
				{
				setState(57);
				match(Text);
				setState(58);
				match(T__0);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(NavigationCommandKeyword);
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(65);
				match(T__0);
				setState(66);
				match(Numbers);
				}
				break;
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(69);
				match(T__0);
				setState(70);
				match(Text);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public List<TerminalNode> Text() { return getTokens(CommandsGrammarParser.Text); }
		public TerminalNode Text(int i) {
			return getToken(CommandsGrammarParser.Text, i);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CommandsGrammarListener ) ((CommandsGrammarListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CommandsGrammarVisitor ) return ((CommandsGrammarVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				match(T__0);
				setState(77);
				match(Text);
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}